2008-09-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GtkLinkButton.t: Test that URI hooks can disconnect themselves
	and modify the user data.  Patch by Kevin Ryde.

	* t/GtkIconView.t: Fix test failure on older gtk+.

2008-09-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	Fix some test failures related to floating point number
	comparisons.

	* pm/TestHelper.pm: Add delta_ok() for comparing floating point
	numbers.

	* t/GdkInput.t
	* t/GtkProgressBar.t
	* t/GtkRange.t
	* t/GtkSpinButton.t
	* t/PangoMatrix.t: Use delta_ok().

	* t/GtkSimpleList.t: Simply don't use floating point numbers here.

2008-09-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GdkPixbuf.t: If saving a pixbuf in 'jpeg' format is not
	supported, try 'png'.  Patch by Flavio Poletti.  (RT #37135)

2008-08-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GtkTreeModelIface.t
	* xs/GtkTreeModel.xs: Fix the stack handling in the xsub for
	gtk_tree_model_get.  We need to call SPAGAIN before and PUTBACK
	after code that modifies the local stack pointer (PUSHs and XPUSHs
	for example).  Patch by Kevin Ryde.

2008-08-23  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* xs/PangoLayout.xs: Fix a leak in the wrapper of
	pango_layout_line_get_x_ranges.  Patch by Kevin Ryde.

2008-08-17  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GtkItemFactory.t: Fix test failures.

	* xs/GtkWindow.xs: Fix small error in the description POD section.
	Patch by Kevin Ryde.

	* t/GtkSocket-GtkPlug.t
	* xs/GtkPlug.xs: Fix the gtk_plug_new_for_display wrapper so it is
	callable as Gtk2::Plug->new_for_display(display, socket_id).  For
	backwards compatibility, also allow
	Gtk2::Plug::new_for_display(display, socket_id).

2008-08-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GtkBuilder.t: Merge the UI definitions and, more importantly,
	make it work correctly with newer gtk+.
