@@ -2,6 +2,10 @@
 
 	Merge from HEAD:
 
+	* t/GtkTreeModelIface.t
+	* xs/GtkTreeModel.xs: The 2008-08-31 change broke the
+	explicit-columns case of Gtk2::TreeModel::get.  Fix it.  Test it.
+
 	* t/GtkLinkButton.t: Test that URI hooks can disconnect themselves
 	and modify the user data.  Patch by Kevin Ryde.
 
